# Match3

./: .gitignore  CMakeLists.txt  GameBoard.qml  GameOverMenu.qml  build.sh  main.cpp  main.qml  mymodel.cpp  mymodel.h  qml.qrc
Plugins/ModelPlugin/: mymodel.cpp  mymodel.h  plugin.cpp
Plugins/modelPlugin/: CMakeLists.txt  mymodel.cpp  mymodel.h  plugin.h
